@@ -1,3 +1,3 @@
-EBUILD emacs-lexbind-23.1.9999-r1.ebuild 9485 RMD160 d3468f8a9678bcbda3e2107c8d74b2047fa97710 SHA1 120759cba7aeaa1c973aa5767223a20fa75690c4 SHA256 1c3fa32bbc76933d727b9565b941c4538617fe70f2e7f6b6ec2b496e5ec71fe9
-MISC ChangeLog 685 RMD160 3fc665162a5c7841152f4de1c12533441ad95493 SHA1 7fea6e127b5cb709da8c257f4a979678710150c1 SHA256 9bb16ed12fd98b69c3dc67429cbc4e8011790fe63fb332da44f586633d02ca9c
+EBUILD emacs-lexbind-23.1.9999-r1.ebuild 9489 RMD160 c4f1cda33528e185cfc7ec9d300bc7f792c0d7a8 SHA1 a9f92a6d0268ad34a0703a48bd0f33a457751d71 SHA256 58e69ae1d81c6719265111d0bf2fada23851970520ccaa8e47e63641d7fa636c
+MISC ChangeLog 817 RMD160 e5091b2f2c719289b33e49b205274b6d09d4de40 SHA1 011a4a686bf202c171b950943730d70179615adf SHA256 158aa1f75e96d0cfc2904048aba73e612d29934d48b8cc36afa802485b8b4ae6
 MISC metadata.xml 1622 RMD160 01a46ab0aebc8acab07a5a874736783791b75c4e SHA1 c2869923f6e835df175a9a6f0d803170bf98fd85 SHA256 7875ea72b5aa0e9dd526c88692c08a3e1598e563d8e2d27e336fd1d5d707cb5c
