@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/emacs-lexbind
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
+  emacs-lexbind-23.1.9999-r1.ebuild:
+  Sync from portage tree. Fix URL of HOMEPAGE.
 
 *emacs-lexbind-23.1.9999-r1 (27 Dec 2009)
 
